@@ -1,3 +1,13 @@
+2004-04-17  Dieter Baron  <dillo@danbala.tuwien.ac.at>
+
+	* lib/zip_replace_zip.c (_zip_replace_zip): set ZIP_CH_ISCOMP when
+	copying compressed data.
+
+	* lib/zip_fclose.c (zip_fclose): don't compare crc when reading
+	compressed data.
+	* lib/zip_fread.c (zip_fread): don't compute crc when reading
+	compressed data.
+
 2004-04-16  Dieter Baron  <dillo@danbala.tuwien.ac.at>
 
 	* lib/zip_name_locate.c (zip_name_locate): honour
